--- a/docs/vignette.Rmd
+++ b/docs/vignette.Rmd
@@ -15,7 +15,7 @@ geometry: margin=1.3in
 
 This vignette contains step-by step instructions for transferring own data into a standardized trait-dataset for upload to public databases. The output object uses the trait data standard put forward in Schneider et al. XX (refer to pub). 
 
-## step 1 reading in data
+## 1. reading data
 
 First, load your own data into R, preferrably in a species--trait matrix, occurrence table or measurement longtable format (See notes on different data formats of trait data). 
 
@@ -32,7 +32,8 @@ carabids <- read.table("../../data/carabid traits final.txt", header = TRUE)
 
 ```
 
-## step 2 transfer into measurement longtable format
+
+## 2. transfer into measurement longtable format
 
 As explained in Schneider et al. XX, most trait data are stored in one of the following formats:
 
@@ -45,6 +46,7 @@ In all cases, additional information on the reported value may be stored in furt
 The function `as.traitdata()` provided in the package assist in transferring any data format into the measurement longtable format. For this function to work, it needs to know about the columns of the original data that contain trait values (parameter `traits`), and the column which contains the taxonomic specification (parameter `taxa`).
 
 ```{r, warning=FALSE}
+data(carabids)
 
 dataset1 <- as.traitdata(carabids, 
                          taxa = "name_correct",
@@ -105,6 +107,7 @@ head(dataset1)
 
 A character vector should have the same length as the provided vector of trait names (in parameter `traits`), or otherwise should be a named vector of the form `c(trait1 = "mm", trait2 = "mm2")`, where only the traits provided will receive units while the others will remain blank. 
 ```{r}
+data(arthropodtraits)
 dataset3 <- as.traitdata(arthropodtraits,
                          taxa = "SpeciesID",
                          traits = c("Body_Size", "Dispersal_ability", "Feeding_guild",
@@ -131,25 +134,6 @@ head(dataset4)
 ```
 
 Logical or factorial traits ususally don't come with a unit. In mixed data, the field should specify as empty, `""` or as`NA`. 
-
-### case example: mutate original columns into derived values
-
-Many traits comprise compound measures of multiple traits, such as length-mass ratios or morphometric indices. Other traits must be refined in terms of factor levels, or reduced to binary trait values. While many of these tasks can be achieved on the raw data using base functions like `transform()`, `factor()` or `match()` or the `mutate()` function provided by the package 'plyr'. 
-
-The function `mutate.traitdata()` performs these tasks (working as a wrapper to `plyr::mutate()`). 
-
-```{r}
-
-updated <- mutate.traitdata(dataset2, 
-                            Body_shape = Body_length/Body_width, 
-                            Body_volume = Body_length*Body_width*Body_height,
-                            Wingload = Wing_length*Wing_width/Body_volume)
-
-head(subset(updated, occurrenceID == 23))
-```
-Note that all existing traits remain untouched and additional trait measures will be added to the dataset, unless a definition replaces an already existing trait (such as 'Stratum_use' in this example).
-
-It is important to note that the mutate function works at the level of data resolution that is provided by the data, i.e. for occurrence data with multiple measurements on a single individual, the data columns are mutated per occurrenceID. 
 
 ### case example: raw data are coded as numeric factor levels 
 
@@ -255,9 +239,30 @@ The function `as.traitdata()` provides a set of parameters to add information at
 
 - under construction -
 
-## step 3 standardise taxon names and trait values 
+
+### case example: mutate original columns into derived values
+
+Many traits comprise compound measures of multiple traits, such as length-mass ratios or morphometric indices. Other traits must be refined in terms of factor levels, or reduced to binary trait values. While many of these tasks can be achieved on the raw data using base functions like `transform()`, `factor()` or `match()` or the `mutate()` function provided by the package 'plyr'. 
+
+The function `mutate.traitdata()` performs these tasks (working as a wrapper to `plyr::mutate()`). 
+
+```{r}
+
+updated <- mutate.traitdata(dataset2, 
+                            Body_shape = Body_length/Body_width, 
+                            Body_volume = Body_length*Body_width*Body_height,
+                            Wingload = Wing_length*Wing_width/Body_volume)
+
+head(subset(updated, occurrenceID == 23))
+```
+Note that all existing traits remain untouched and additional trait measures will be added to the dataset, unless a definition replaces an already existing trait (such as 'Stratum_use' in this example).
+
+It is important to note that the mutate function works at the level of data resolution that is provided by the data, i.e. for occurrence data with multiple measurements on a single individual, the data columns are mutated per occurrenceID. 
+
+## 3. standardise taxon names and trait values 
 
 Step 1 and 2 produced a tidy and correctly formatted version of your own trait data. We now turn to the challenging task of standardisation. Two aspects of trait data need thorough standardisation: the names of species and higher taxa need to be mapped to globally accepted definitions and the names of traits should be referenced to unambiguous definitions and, where possible, translated to standard units and accepted factor levels. 
+
 
 ### taxon name standardisation
 
@@ -275,7 +280,6 @@ head(dataset1std)
 
 ```
 
-
 ### trait name and value standardisation
 
 Due to the heterogeneity of approaches and research questions related to trait-based research, a universal trait definition standard does not exist at the time of writing this. Therefore it is difficult to assign globally unique identifiers that provide a reference to an unambiguous definition. Some databases offer a list of traits in some way or another, e.g. as a datasheet of in-text table, but few offer a stable URI reference or an API. Exceptions are the Gramene Ontology, which offers trait definitions for crop plants, and the TOP thesaurus for plant traits (http://top-thesaurus.org), which is rather comprehensive, but does not provide easy means of referencing. Many such trait ontologies are currently under construction for different animal phyla.  
@@ -284,7 +288,7 @@ For most cases, you would instead refer to an own lookup table, a so called thes
 
 To transfer the user provided traits and trait values into standardised values, the function `standardize.traits()` merges the data table with a reference table of trait definitions to produce values of a compliant format. 
 
-#### refer to an existing trait thesaurus
+#### refer to an existing trait ontology
 
 A couple of trait ontologies do exist, e.g. the TOP Thesaurus of plant traits (used by TRY) or Gramene.org offer definitions of plant traits via an API. For soil invertebrates, the T-SITA thesaurus offers a set of traits relevant for this organism group. To date, no script for a systematic access of these ontologies can be provided here. Thus, the key information must be provided manually as an own data object in R. 
 
@@ -309,7 +313,7 @@ traits1 <- as.thesaurus(data.frame(traitName = c("body_length", "antenna_length"
 
 We highly encourage the implementation of open online resources for these glossaries (e.g. via APIs), which would allow a looking up existing trait definitions programmatically, and match user provided names to accepted trait names via fuzzy matching. 
 
-#### refer to an own trait list
+#### refer to an own trait thesaurus
 
 For an interim solution, until comprehensive trait ontologies are compiled, your dataset should therefore be referenced to a publicly available dataset or file that specifies the trait in detail. Ideally it is stored as an asset along with your trait dataset. This can be a csv or txt file published on a open access repository (figshare, researchgate or github, to name but a few), or a website providing direct links to the trait definition (URI). 
 
@@ -383,7 +387,20 @@ The traitdata standard has been developed within the Biodiversity Exploratories 
 
 To access the high-resolution location data, credentials to BEXIS will be requested. If credentials are incorrect or missing, only low-resolution geolocation can be extracted. 
 
+```{r}
+# dataset by Jule Mangels et al. 
 
+moths <- read.service(21247, dec = ",") 
+ 
+dataset5 <- as.traitdata(moths, taxa = "species", traits = c(body_mass =
+     "weight", wing_length = "wing_length", wing_width = "wing_width", wing_area =
+     "wing_area", wing_loading = "wing_loading"),
+   keep = c(locationID = "plot"))
+ 
+dataset5Std <- standardize.exploratories(dataset1)
+
+head(dataset5Std)
+```
 
 
 ### single stroke standardization
@@ -402,4 +419,30 @@ dataset1final <- standardize(carabids,
             )
 
 ```
+
+
+## 4.Working with trait datasets
+
+
+## merging traitdata tables
+
+The merging of separate datasets can be done before or after the standardisation process, depending on the use case. Use cases of merging data are:
+
+- you collected data from different sources and want to harmonize taxon and trait names: bring data in long-table format and merge into one data object, then harmonize taxa and units following a uniform standard
+- No unified trait list or taxon reference exists for the heterogeneous data assembled of different sources (e.g. because spanning many different taxa): Apply standardization to different reference systems before merging the datasets.
+
+
+```{r}
+```
+
+
+## filter data
+
+
+## compile aggregate values
+
+base::reshape()
+reshape2::melt()
+tidyr::gather()
+
 
